--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,9 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
-}
+@INPROCEEDINGS{apasipa2018,
+  author={L. {Zhuo} and S. {Tan} and J. {Zeng} and B. {Lit}},
+  booktitle={2018 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)}, 
+  title={Fake Colorized Image Detection with Channel-wise Convolution based Deep-learning Framework}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={733-736},
+  doi={10.23919/APSIPA.2018.8659761}}
